<resources>

    <string name="app_name">Blind Bit</string>
    <string name="ventana_instruc">Instrucciones</string>
    <string name="ventana_config"> Ajustes</string>
    <string name="ventana_ruta">Ruta</string>
    <string name="ventana_destinos">Lista de destinos vieja</string>
    <string name="ventana_destinosdinamica">Lista de destinos</string>
    <string name="ventana_aulas">Lista de aulas vieja</string>
    <string name="button_start_searching">Iniciar ruta</string>
    <string name="config_button">Ajustes</string>
    <string name="instructions_button">Instrucciones</string>
    <string name="logo_image">Logo de la aplicación</string>

    <!-- CONFIGURACION -->
    <string name="volumen_button">Volumen</string>
    <string name="verbose_switch">MODO VERBOSE</string>

    <!-- CLIENTE -->
    <string name="start_scan_button">START SCANNING</string>
    <string name="stop_scan_button">STOP SCANNING</string>

    <string name="beacon_text">Beacons encontrados:\n</string>
    <string name="inst_text">Destino: aula 1.\nContinua recto 5.0 metros. Luego gira a la izquierda.</string>

    <string name="iniciar_button">Iniciar ruta</string>
    <string name="repetir_button">Repetir instrucción</string>
    <string name="parar_button">Finalizar ruta</string>
    <string name="verbose_ruta_button">Instrucciones detalladas</string>

    <!-- MODO DE USO -->
    <string name="instrucciones_text">Aquí meteremos las instrucciones de uso de nuestra app.\n</string>
    <string name="general_button">Cómo iniciar una ruta</string>
    <string name="buscar_destino_button">Cómo buscar un destino</string>
    <string name="instruc_detalladas_button">Qué son las instrucciones detalladas</string>
    <string name="repetir_instrucc_button">En qué consiste repetir instrucción</string>

    <!-- INSTRUCCIONES -->
    <string name="anterior_button">Anterior</string>
    <string name="rep_button">Reproducir</string>
    <string name="siguiente_button">Siguiente</string>

    <!-- LISTA DESTINOS -->
    <string name="conserjeria_button">Conserjería\n</string>
    <string name="aulas_button">Aulas</string>
    <string name="secretaria_button">Secretaría\n</string>
    <string name="sala_grados_button">Sala de\ngrados</string>
    <string name="sala_juntas_button">Sala de\njuntas</string>
    <string name="cafeteria_button">Cafetería</string>
    <string name="biblioteca_button">Biblioteca</string>
    <string name="salon_actos_button">Salón de\nactos</string>
    <string name="puerta_principal_button">Puerta\nprincipal</string>

    <string name="microfono_descripcion">Micrófono</string>
    <string name="microfono_descripcion_aulas">Micrófono</string>
    <string name="microfono_dinamico">Micrófono</string>

    <!-- LISTA AULAS -->
    <string name="aula_1_button">Aula 1</string>
    <string name="aula_2_button">Aula 2</string>
    <string name="aula_3_button">Aula 3</string>
    <string name="aula_4_button">Aula 4</string>
    <string name="aula_5_button">Aula 5</string>
    <string name="aula_6_button">Aula 6</string>
    <string name="aula_7_button">Aula 7</string>
    <string name="aula_8_button">Aula 8</string>
    <string name="aula_9_button">Aula 9</string>
    <string name="aula_10_button">Aula 10</string>
    <string name="aula_11_button">Aula 11</string>
    <string name="aula_12_button">Aula 12</string>
    <string name="aula_13_button">Aula 13</string>
    <string name="aula_14_button">Aula 14</string>
    <string name="aula_15_button">Aula 15</string>
    <string name="aula_16_button">Aula 16</string>


</resources>
