<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app_guia_v5.ListaDestinosActivity">


    <ImageButton
        android:id="@+id/img_btn_hablar"
        android:layout_width="141dp"
        android:layout_height="141dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/mic_logo"
        android:contentDescription="@string/microfono_descripcion"
        android:onClick="onClickImgBtnHablar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:layout_width="342dp"
        android:layout_height="315dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinos_searchView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/aulas_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border_light"
                android:text="@string/aulas_button" />

            <Button
                android:id="@+id/cafeteria_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/cafeteria_button" />

            <Button
                android:id="@+id/biblioteca_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/biblioteca_button" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/salon_actos_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/salon_actos_button" />

            <Button
                android:id="@+id/sala_juntas_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/sala_juntas_button" />

            <Button
                android:id="@+id/sala_grados_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/sala_grados_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/conserjeria_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:contentDescription="@string/conserjeria_button"
                android:text="@string/conserjeria_button"
                android:textSize="13sp" />

            <Button
                android:id="@+id/puerta_principal_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/puerta_principal_button" />

            <Button
                android:id="@+id/secretaria_button"
                android:layout_width="match_parent"
                android:layout_height="103dp"
                android:layout_weight="1"
                android:background="@drawable/edit_text_border"
                android:text="@string/secretaria_button" />
        </TableRow>

    </TableLayout>

    <SearchView
        android:id="@+id/destinos_searchView"
        android:layout_width="325dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="?attr/actionModeBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

</androidx.constraintlayout.widget.ConstraintLayout>
