<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.app_guia_v5.ScanningActivity">

    <EditText
        android:id="@+id/beacon_text"
        android:layout_width="333dp"
        android:layout_height="193dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:fadeScrollbars="true"
        android:hint="@string/inst_text"
        android:importantForAccessibility="no"
        android:isScrollContainer="true"
        android:overScrollMode="always"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:text="@string/inst_text"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="308dp"
        android:layout_height="339dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/iniciar_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#93DD3C"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/iniciar_button"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/repetir_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border_light"
            android:drawableLeft="@android:drawable/ic_menu_rotate"
            android:text="@string/repetir_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/modo_verb_ruta_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
            android:text="@string/verbose_ruta_button"
            android:textSize="24sp" />

        <Button
            android:id="@+id/parar_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text_border_light"
            android:drawableLeft="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@string/parar_button"
            android:textSize="24sp" />


    </LinearLayout>

    <Button
        android:id="@+id/mute_button"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/speaker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>